// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Salaires /> should add a salaire 1`] = `
.c5 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c5:focus,
.c5:hover,
.c5:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2 {
  position: relative;
  display: inline-block;
  margin-right: 1rem;
}

.c4 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  margin-right: 0.625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c6 {
  margin-right: 1.25rem;
  font-size: 0.875rem;
}

.c7 {
  margin: 1.25rem 0;
}

<div>
  <p>
    Indiquez vos salaires mensuels bruts perçus pendant votre contrat *
  </p>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="5"
    >
      Montant :
    </label>
    <div
      class="c2"
    >
      <input
        class="c3"
        id="5"
        name="salaires[0].salaire"
        size="10"
        type="number"
        value=""
      />
      <span
        aria-hidden="true"
        class="c4"
      >
        €
      </span>
    </div>
    <button
      class="c5 c6"
      type="button"
    >
      Supprimer
    </button>
  </div>
  <button
    class="c5 c7"
    type="button"
  >
    Ajouter un salaire
  </button>
</div>
`;

exports[`<Salaires /> should delete a salaires 1`] = `
.c0 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c0:focus,
.c0:hover,
.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin: 1.25rem 0;
}

<div>
  <p>
    Indiquez vos salaires mensuels bruts perçus pendant votre contrat *
  </p>
  <button
    class="c0 c1"
    type="button"
  >
    Ajouter un salaire
  </button>
</div>
`;

exports[`<Salaires /> should render 1`] = `
.c5 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c5:focus,
.c5:hover,
.c5:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2 {
  position: relative;
  display: inline-block;
  margin-right: 1rem;
}

.c4 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  margin-right: 0.625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c6 {
  margin-right: 1.25rem;
  font-size: 0.875rem;
}

.c7 {
  margin: 1.25rem 0;
}

<div>
  <p>
    Indiquez vos salaires mensuels bruts perçus pendant votre contrat *
  </p>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="1"
    >
      Montant :
    </label>
    <div
      class="c2"
    >
      <input
        class="c3"
        id="1"
        name="salaires[0].salaire"
        size="10"
        type="number"
        value="3000"
      />
      <span
        aria-hidden="true"
        class="c4"
      >
        €
      </span>
    </div>
    <button
      class="c5 c6"
      type="button"
    >
      Supprimer
    </button>
  </div>
  <button
    class="c5 c7"
    type="button"
  >
    Ajouter un salaire
  </button>
</div>
`;
